--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ h1 {
 }
 
 p {
+    margin: 25px 0 25px 0;
     font-size: 50px;
     font-weight: 100;
     color: #fff;
@@ -74,7 +75,8 @@ input  {
     text-align: center;
 }
 .info h1 {
-    padding-top: 150px;
+    padding-top: 125px;
+    margin-bottom: 25px;
 }
 
 /*----------
@@ -85,18 +87,8 @@ input  {
     justify-content: center;
     text-align: center;
 }
-
-#backBtn {
-    position: absolute;
-    left: 20px;
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 30px;
-    font-weight: 100;
-}#backBtn:hover {
-    border: 1px solid #fff;
-    border-radius: 10px;
+.results h1 {
+    margin: 150px 0 35px 0;
 }
 
 /*----------
@@ -117,6 +109,19 @@ input  {
 }
 
 
+#backBtn {
+    position: absolute;
+    left: 20px;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 100;
+}
+#backBtn:hover {
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
 
 
 
